--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HowTail</title>
     <link rel="icon" type="image/x-icon" href="IMG/favicon.ico">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/screen.css">
     <script src="script/app.js"></script>
 </head>
 
 <body>
     <div class="c-app">
         <div class="c-app__logo">
-            <h1 class="c-logo"> How-Tail</h1>
+            <h1 class="c-logo"> HowTail</h1>
         </div>
         <div class="c-app__topbar">
             <div class="c-topbar">
@@ -29,15 +31,15 @@
                 </form>
             </div>
         </div>
-        <div class="c-app__sidebar">
-            <nav class="c-main-nav">
+        <div class="c-app__sidebar disableScroll">
+            <nav class="c-main-nav ">
                 <ul class="o-list c-main-nav__list js-categories"></ul>
             </nav>
         </div>
         <div class="c-app__main">
             <div class="o-row">
                 <div class="o-container">
-                    <h2> Recommended cocktail </h2>
+                    <h2> Recommended cocktails </h2>
                     <div class="c-dashboard">
                         <div class="c-dashboard__item u-x-span-4-bp3 u-y-span-2-bp3">
                             <div class="c-card">
@@ -52,7 +54,7 @@
                         <div class="c-dashboard__item u-x-span-8-bp3">
                             <div class="c-cad">
                                 <div class="c-card__body">
-                                    <p class="js-CocktailName">Margarita</p>
+                                    <p class="js-CocktailName c-card__body--header">Margarita</p>
                                     <p class="js-CocktailCategory">Ordinary Drink</p>
                                 </div>
                             </div>
@@ -60,7 +62,7 @@
                         <div class="c-dashboard__item u-x-span-4-bp3">
                             <div class="c-card">
                                 <div class="c-card__body">
-                                    <p> This drink is </p>
+                                    <p class="c-card__body--header"> Drink type </p>
                                     <p class="js-CocktailAlcoholic">Alcoholic</p>
                                 </div>
                             </div>
@@ -68,30 +70,32 @@
                         <div class="c-dashboard__item u-x-span-4-bp3">
                             <div class="c-card">
                                 <div class="c-card__body">
-                                    <p> Glass </p>
+                                    <p class="c-card__body--header"> Glass type </p>
                                     <p class="js-CocktailGlass">Cocktail glass</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="c-dashboard__item u-x-span-4-bp3">
-                            <div class="c-card">
-                                <div class="c-card__body">
-                                    <p> Ingredients </p>
                                 </div>
                             </div>
                         </div>
                         <div class="c-dashboard__item u-x-span-8-bp3">
                             <div class="c-card">
                                 <div class="c-card__body">
+                                    <p class="c-card__body--header">Ingredients</p>
                                     <p class="js-CocktailIngredients">Tequila, Triple sec, Lime juice, Salt</p>
                                 </div>
-                            </div>   
+                            </div>
                         </div>
+                        <!-- <a class="c-link"> Add to list </p> -->
+                            <div class="c-dashboard__item u-x-span-4-bp3 u-transparent">
+                                <div class="c-card__body">
+                                        <button  class="c-card__button o-button-reset">
+                                            Add to list
+                                        </button>
+                                </div>
+                            </div>
                     </div>
                 </div>
             </div>
         </div>
-        <p class="js-test">Hi</p>
+    </div>
 </body>
 
 </html>
