commit : app.js

--- a/index.html
+++ b/index.html
@@ -32,69 +32,18 @@
             </div>
         </div>
         <div class="c-app__sidebar disableScroll">
-            <nav class="c-main-nav ">
+            <nav class="c-main-nav">
                 <ul class="o-list c-main-nav__list js-categories"></ul>
             </nav>
         </div>
         <div class="c-app__main">
-            <div class="o-row">
-                <div class="o-container">
+            <div class="o-row js-Cocktails">
+                <div class="o-container__header">
                     <h2> Recommended cocktails </h2>
-                    <div class="c-dashboard">
-                        <div class="c-dashboard__item u-x-span-4-bp3 u-y-span-2-bp3">
-                            <div class="c-card">
-                                <div class="c-card__body">
-                                    <svg class="js-ImageLink">
-                                        <!-- <image  href="https://www.thecocktaildb.com/images/media/drink/5noda61589575158.jpg"
-                                                width="100%" height="100%" /> -->
-                                    </svg>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="c-dashboard__item u-x-span-8-bp3">
-                            <div class="c-cad">
-                                <div class="c-card__body">
-                                    <p class="js-CocktailName c-card__body--header">Margarita</p>
-                                    <p class="js-CocktailCategory">Ordinary Drink</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="c-dashboard__item u-x-span-4-bp3">
-                            <div class="c-card">
-                                <div class="c-card__body">
-                                    <p class="c-card__body--header"> Drink type </p>
-                                    <p class="js-CocktailAlcoholic">Alcoholic</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="c-dashboard__item u-x-span-4-bp3">
-                            <div class="c-card">
-                                <div class="c-card__body">
-                                    <p class="c-card__body--header"> Glass type </p>
-                                    <p class="js-CocktailGlass">Cocktail glass</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="c-dashboard__item u-x-span-8-bp3">
-                            <div class="c-card">
-                                <div class="c-card__body">
-                                    <p class="c-card__body--header">Ingredients</p>
-                                    <p class="js-CocktailIngredients">Tequila, Triple sec, Lime juice, Salt</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- <a class="c-link"> Add to list </p> -->
-                            <div class="c-dashboard__item u-x-span-4-bp3 u-transparent">
-                                <div class="c-card__body">
-                                        <button  class="c-card__button o-button-reset">
-                                            Add to list
-                                        </button>
-                                </div>
-                            </div>
-                    </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
