--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </nav>
         </div>
         <div class="c-app__main">
-            <div class="o-row js-Cocktails">
+            <div class="o-row js-Cocktails container y mandatory-scroll-snapping" dir="ltr">
                 <div class="o-container__header">
                     <h2> Recommended cocktails </h2>
                 </div>
